fix: enable dark mode

--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,8 @@ h3 {
     height: 300px; 
     width: 300px;
     flex-shrink: 0;
+    background-color: white;
+    border-radius: 5px;
 }
 
 .imageWrapper .imageWrapper {
